# scg-chibicad

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  SETUP.md  TODO.md
src/: main.cpp
src/collection/: Point2Collection.hpp  PointCollection.cpp  PointCollection.hpp
src/command/: AddPointCommand.hpp  DeletePointCommand.hpp  IMouseCommand.hpp  SelectPointCommand.hpp
src/core/: AppState.cpp  AppState.hpp  CommandState.hpp  Constants.hpp  Renderer.cpp  Renderer.hpp
src/geometry/: Point2.hpp  Point2f.cpp  Point2f.hpp
src/handler/: InputHandler.hpp
src/ui/: ControlPanel.cpp  ControlPanel.hpp  MenuBar.cpp  MenuBar.hpp
test/: CMakeLists.txt
test/geometry/: Point2CollectionTest.cpp  Point2Test.cpp
